Updateing REACT_APP_STRAPI_URL from localhost

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_STRAPI_URL=http://localhost:1337
+REACT_APP_STRAPI_URL=https://lbc-cms.onrender.com/
 SENDGRID_API_KEY=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
